<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ragfilsc.booklocator.SplashScreen"
    android:background="#FFF">

        <TextView
            android:id="@+id/lblCompany01"
            android:text="@string/strWawasan"
            android:paddingTop="5dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#076543"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logowawasan" />

        <TextView
            android:id="@+id/lblBy"
            android:text="@string/strPoweredBy"
            android:paddingTop="5dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#c0c0c0"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_above="@+id/lblName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/lblName"
            android:text="@string/strStdName"
            android:paddingTop="5dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="#076543"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
