<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ragfilsc.booklocator.Login"
    android:background="#FFF">

    <TextView
        android:id="@+id/lblCompany01"
        android:text="@string/strWawasan"
        android:paddingTop="5dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="#076543"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/lblCompany01"
        android:src="@drawable/logowawasan" />

    <TextView
        android:id="@+id/lblCaption"
        android:text="Please enter your LOGIN DETAILS"
        android:paddingTop="5dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="#F00"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_below="@+id/Logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtUsername"
        android:hint="USER ID"
        android:textAlignment="center"
        android:gravity="center"
        android:maxLines="1"
        android:layout_below="@+id/lblCaption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtPassword"
        android:hint="PIN"
        android:textAlignment="center"
        android:gravity="center"
        android:password="true"
        android:maxLines="1"
        android:inputType="number"
        android:layout_below="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="Login"
        android:gravity="center"
        android:background="#076543"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/lblBy"
        android:text="@string/strPoweredBy"
        android:paddingTop="5dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="#c0c0c0"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/lblStdName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/lblStdName"
        android:text="@string/strStdName"
        android:paddingTop="5dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="#076543"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
